--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "2D point object",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/minijasminenode2 test.js --verbose"
+    "test": "./node_modules/.bin/minijasminenode2 test.js --verbose",
+    "lint": "./node_modules/.bin/jslint --sloppy index.js && ./node_modules/.bin/jslint --sloppy --predef it --predef expect --predef describe --predef beforeEach test.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/CrowdHailer/point",
   "devDependencies": {
-    "minijasminenode2": "^1.0.0"
+    "minijasminenode2": "^1.0.0",
+    "jslint": "^0.6.2"
   }
 }
